--- a/int_resources/css/color-layout.css
+++ b/int_resources/css/color-layout.css
@@ -170,14 +170,12 @@
 
 .layouts{
     width:100%;
-    height:0;
     position:relative;
-    transition:0.4s;
 }
 
 .layout{
     width:100%;
-    height:500px;
+    height:100%;
     padding:var(--wrapperPadding1);
     box-sizing:border-box;
 
@@ -194,6 +192,7 @@
 
 .display-layout{
     height:auto;
+    position:relative;
     left:0;
     animation:layoutFadeIn 0.4s;
 }
